Organize dconf configs

--- a/.config/.dconf-configs/pop-os-mac.ini
+++ b/.config/.dconf-configs/pop-os-mac.ini
@@ -5,7 +5,7 @@ window-y=99
 
 [io/elementary/appcenter/settings]
 cached-drivers=@as []
-last-refresh-time=int64 1654459157
+last-refresh-time=int64 1655379691
 window-maximized=false
 window-position=(2328, 32)
 window-size=(954, 1044)
@@ -17,6 +17,10 @@ temperature-unit='centigrade'
 migrated-config=true
 window-height=518
 window-width=954
+
+[org/gnome/Totem]
+active-plugins=['apple-trailers', 'rotation', 'autoload-subtitles', 'mpris', 'open-directory', 'recent', 'variable-rate', 'vimeo', 'screensaver', 'screenshot', 'save-file', 'skipto', 'movie-properties']
+subtitle-encoding='UTF-8'
 
 [org/gnome/Weather]
 locations=[<(uint32 2, <('Campinas', 'SBKP', true, [(-0.40154692362195432, -0.82265123889688618)], [(-0.39968039870670141, -0.82175918366289935)])>)>]
@@ -112,6 +116,9 @@ application-id='org.gnome.Shell.Extensions.desktop'
 [org/gnome/desktop/notifications/application/org-gnome-terminal]
 application-id='org.gnome.Terminal.desktop'
 
+[org/gnome/desktop/notifications/application/org-gnome-totem]
+application-id='org.gnome.Totem.desktop'
+
 [org/gnome/desktop/notifications/application/org-gnome-tweaks]
 application-id='org.gnome.tweaks.desktop'
 
@@ -121,6 +128,8 @@ numlock-state=true
 [org/gnome/desktop/peripherals/touchpad]
 click-method='areas'
 disable-while-typing=false
+edge-scrolling-enabled=false
+natural-scroll=true
 send-events='enabled'
 two-finger-scrolling-enabled=true
 
@@ -313,10 +322,15 @@ manualhide=false
 multi-monitor=true
 
 [org/gnome/shell/extensions/dash-to-panel]
+animate-appicon-hover=true
+animate-appicon-hover-animation-convexity={'RIPPLE': 2.0, 'PLANK': 1.0, 'SIMPLE': 0.0}
 animate-appicon-hover-animation-extent={'RIPPLE': 4, 'PLANK': 4, 'SIMPLE': 1}
+animate-appicon-hover-animation-travel={'SIMPLE': 0.10000000000000001, 'RIPPLE': 0.40000000000000002, 'PLANK': 0.0}
+animate-appicon-hover-animation-type='SIMPLE'
 appicon-margin=4
 appicon-padding=4
 available-monitors=[0, 1]
+desktop-line-use-custom-color=false
 dot-color-dominant=false
 dot-color-override=false
 dot-position='BOTTOM'
@@ -325,6 +339,16 @@ dot-style-focused='METRO'
 dot-style-unfocused='DOTS'
 focus-highlight-dominant=true
 focus-highlight-opacity=10
+group-apps=true
+group-apps-label-font-color='#dddddd'
+group-apps-label-font-color-minimized='#dddddd'
+group-apps-label-font-size=14
+group-apps-label-font-weight='inherit'
+group-apps-label-max-width=160
+group-apps-underline-unfocused=true
+group-apps-use-fixed-width=true
+group-apps-use-launchers=false
+hide-overview-on-startup=true
 hotkeys-overlay-combo='TEMPORARILY'
 intellihide=false
 isolate-monitors=true
@@ -350,7 +374,9 @@ status-icon-padding=-1
 stockgs-keep-dash=true
 stockgs-keep-top-panel=false
 stockgs-panelbtn-click-only=false
+trans-bg-color='#000000'
 trans-panel-opacity=0.75
+trans-use-custom-bg=false
 trans-use-custom-gradient=false
 trans-use-custom-opacity=true
 trans-use-dynamic-opacity=false
@@ -419,7 +445,7 @@ hide-icons=false
 hide-zeros=false
 hot-sensors=['_memory_usage_', '__temperature_avg__', '_processor_average_']
 memory-measurement=1
-position-in-panel=2
+position-in-panel=4
 show-battery=false
 show-fan=false
 show-storage=false
@@ -463,9 +489,27 @@ switch-to-tab-last='<Alt>minus'
 toggle-menubar='disabled'
 zoom-in='<Primary>equal'
 
+[org/gnome/terminal/legacy/profiles:]
+default='0115caac-45f2-4997-b5a4-7d7e43837c18'
+list=['b1dcc9dd-5262-4d8d-a863-c897e6d979b9', '0115caac-45f2-4997-b5a4-7d7e43837c18']
+
+[org/gnome/terminal/legacy/profiles:/:0115caac-45f2-4997-b5a4-7d7e43837c18]
+background-color='#282c34'
+bold-color='#ABB2BF'
+bold-color-same-as-fg=true
+bold-is-bright=false
+foreground-color='#abb2bf'
+palette=['#000000', '#e06c75', '#98c379', '#d19a66', '#61afef', '#c678dd', '#56b6c2', '#abb2bf', '#5c6370', '#e06c75', '#98c379', '#d19a66', '#61afef', '#c678dd', '#56b6c2', '#ffffff']
+use-theme-background=false
+use-theme-colors=false
+visible-name='One Dark'
+
+[org/gtk/gtk4/settings/color-chooser]
+selected-color=(true, 0.0, 0.0, 0.0, 1.0)
+
 [org/gtk/settings/color-chooser]
-custom-colors=[(0.090196078431372576, 0.14651647893199835, 0.97254901960784312, 1.0), (0.090196078431372548, 0.63529411764705879, 0.97254901960784312, 1.0), (0.090844444444444492, 0.63535886524822716, 0.97333333333333338, 1.0), (0.15294117647058825, 0.49411764705882355, 0.88627450980392153, 1.0), (0.1536888888888889, 0.49251823899371039, 0.88666666666666671, 1.0), (0.25882352941176473, 0.45098039215686275, 0.67450980392156867, 1.0), (0.25882352941176473, 0.45098039215686259, 0.67450980392156867, 1.0), (0.37647058823529411, 0.74901960784313726, 0.93725490196078431, 1.0)]
-selected-color=(true, 0.090196078431372576, 0.14651647893199835, 0.97254901960784312, 1.0)
+custom-colors=[(0.38039215686274508, 0.68627450980392157, 0.93725490196078431, 1.0), (0.33725490196078434, 0.71372549019607845, 0.76078431372549016, 1.0), (0.090196078431372576, 0.14651647893199835, 0.97254901960784312, 1.0), (0.090196078431372548, 0.63529411764705879, 0.97254901960784312, 1.0), (0.090844444444444492, 0.63535886524822716, 0.97333333333333338, 1.0), (0.15294117647058825, 0.49411764705882355, 0.88627450980392153, 1.0), (0.1536888888888889, 0.49251823899371039, 0.88666666666666671, 1.0), (0.25882352941176473, 0.45098039215686275, 0.67450980392156867, 1.0)]
+selected-color=(true, 0.33725490196078434, 0.71372549019607845, 0.76078431372549016, 1.0)
 
 [org/gtk/settings/file-chooser]
 date-format='regular'
@@ -478,5 +522,5 @@ sort-column='name'
 sort-directories-first=true
 sort-order='ascending'
 type-format='category'
-window-position=(1411, 29)
+window-position=(1411, 121)
 window-size=(1096, 822)
