--- a/.config/.dconf-configs/gnome-terminal.ini
+++ b/.config/.dconf-configs/gnome-terminal.ini
@@ -10,14 +10,14 @@ find-next='disabled'
 find-previous='disabled'
 move-tab-left='disabled'
 move-tab-right='disabled'
-new-tab='<Primary>t'
+new-tab='<Primary><Shift>t'
 new-window='<Primary><Shift>n'
 next-tab='<Primary>b'
 paste='<Primary>v'
 preferences='<Alt>e'
 prev-tab='disabled'
 reset='disabled'
-select-all='<Primary>a'
+select-all='disabled'
 switch-to-tab-last='<Alt>minus'
 toggle-menubar='disabled'
 zoom-in='<Primary>equal'
