--- a/.config/kitty/colors/onedark.conf
+++ b/.config/kitty/colors/onedark.conf
@@ -46,4 +46,5 @@ inactive_tab_background #282c34
 
 # to show just a little bit of my wallpaper
 background_opacity 0.97
+dynamic_background_opacity yes
 
