Customize terminal emulator

--- a/.config/kitty/keybindings.conf
+++ b/.config/kitty/keybindings.conf
@@ -1,31 +1,14 @@
-map ctrl+shift+c     copy_to_clipboard
-map ctrl+shift+v     paste_from_clipboard
-map ctrl+shift+w     close_window
-
-/* opposite from default */
-map ctrl+shift+enter    new_os_window
-map ctrl+shift+n        new_window
-
-
-kitty_mod ctrl+shift
+kitty_mod           ctrl+shift
 
 map kitty_mod+r     load_config_file
+
+map kitty_mod+h     previous_window
+map kitty_mod+j     previous_window
+map kitty_mod+k     next_window
+map kitty_mod+l     next_window
 
 map alt+c           close_window
 map alt+d           detach_window new-tab
 map alt+d           detach_tab
-map kitty_mod+t     new_tab
-map kitty_mod+q     close_tab
 map alt+q           close_tab
-
-map ctrl+shift+j          previous_window
-map ctrl+shift+k          next_window
-
-map ctrl+tab              next_tab
-map ctrl+shift+l          next_tab
-map ctrl+shift+tab        previous_tab
-map ctrl+shift+h          previous_tab
-
-open_url_with       firefox
-map kitty_mod+e     open_url_with_hints
 
