--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,9 +1,8 @@
 include ./fonts.conf
 include ./cursor.conf
-include ./mouse.conf
-include ./bell.conf
+include ./details.conf
 include ./layout.conf
 include ./tabbar.conf
-include colors/onedark.conf
+include ./onedark.conf
 include ./keybindings.conf
 
