--- a/.config/kitty/fonts.conf
+++ b/.config/kitty/fonts.conf
@@ -7,3 +7,8 @@ font_size        12.0
 
 disable_ligatures cursor
 
+font_features FiraCode-Retina           zero ss03 ss06
+font_features FiraCode-Bold             zero ss03 ss06
+font_features FiraCode-RegularItalic    zero ss03 ss06
+font_features FiraCode-BoldItalic       zero ss03 ss06
+
