Update some gnome things

--- a/.config/.dconf-configs/pop-os-mac.ini
+++ b/.config/.dconf-configs/pop-os-mac.ini
@@ -5,7 +5,7 @@ window-y=99
 
 [io/elementary/appcenter/settings]
 cached-drivers=@as []
-last-refresh-time=int64 1655379691
+last-refresh-time=int64 1658165940
 window-maximized=false
 window-position=(2328, 32)
 window-size=(954, 1044)
@@ -26,7 +26,7 @@ subtitle-encoding='UTF-8'
 locations=[<(uint32 2, <('Campinas', 'SBKP', true, [(-0.40154692362195432, -0.82265123889688618)], [(-0.39968039870670141, -0.82175918366289935)])>)>]
 
 [org/gnome/control-center]
-last-panel='mouse'
+last-panel='background'
 
 [org/gnome/desktop/a11y/applications]
 screen-reader-enabled=false
@@ -58,9 +58,9 @@ translate=true
 color-shading-type='solid'
 picture-options='zoom'
 picture-uri='file:///usr/share/backgrounds/pop/sebastien-gabriel-232361.jpg'
-picture-uri-dark='file:///usr/share/backgrounds/pop/sebastien-gabriel-232361.jpg'
-primary-color='#000000'
-secondary-color='#000000'
+picture-uri-dark='file:///home/matheus/.local/share/backgrounds/2022-07-13-19-04-31-136470.jpg'
+primary-color='#000000000000'
+secondary-color='#000000000000'
 
 [org/gnome/desktop/input-sources]
 current=uint32 0
@@ -77,14 +77,16 @@ enable-animations=true
 enable-hot-corners=false
 font-antialiasing='grayscale'
 font-hinting='slight'
+font-name='Fira Sans Semi-Light 10'
 gtk-theme='WhiteSur-Dark'
 icon-theme='Colloid-light'
 locate-pointer=true
+monospace-font-name='Fira Code 11'
 show-battery-percentage=true
 toolkit-accessibility=false
 
 [org/gnome/desktop/notifications]
-application-children=['firefox', 'org-gnome-shell-extensions', 'org-gnome-terminal', 'gnome-network-panel', 'org-gnome-nautilus', 'org-gnome-geary', 'gnome-power-panel', 'org-gnome-gedit', 'org-gnome-tweaks', 'gnome-control-center']
+application-children=['firefox', 'org-gnome-shell-extensions', 'org-gnome-terminal', 'gnome-network-panel', 'org-gnome-nautilus', 'org-gnome-geary', 'gnome-power-panel', 'org-gnome-gedit', 'org-gnome-tweaks', 'gnome-control-center', 'org-gnome-eog', 'org-gnome-fileroller', 'io-elementary-appcenter', 'org-gnome-font-viewer', 'kitty']
 
 [org/gnome/desktop/notifications/application/firefox]
 application-id='firefox.desktop'
@@ -100,6 +102,18 @@ application-id='gnome-power-panel.desktop'
 
 [org/gnome/desktop/notifications/application/io-elementary-appcenter]
 application-id='io.elementary.appcenter.desktop'
+
+[org/gnome/desktop/notifications/application/kitty]
+application-id='kitty.desktop'
+
+[org/gnome/desktop/notifications/application/org-gnome-eog]
+application-id='org.gnome.eog.desktop'
+
+[org/gnome/desktop/notifications/application/org-gnome-fileroller]
+application-id='org.gnome.FileRoller.desktop'
+
+[org/gnome/desktop/notifications/application/org-gnome-font-viewer]
+application-id='org.gnome.font-viewer.desktop'
 
 [org/gnome/desktop/notifications/application/org-gnome-geary]
 application-id='org.gnome.Geary.desktop'
@@ -145,9 +159,9 @@ tls-key='/home/matheus/.local/share/gnome-remote-desktop/rdp-tls.key'
 color-shading-type='solid'
 lock-delay=uint32 30
 picture-options='zoom'
-picture-uri='file:///usr/share/backgrounds/pop/sebastien-gabriel-232361.jpg'
-primary-color='#000000'
-secondary-color='#000000'
+picture-uri='file:///home/matheus/.local/share/backgrounds/2022-07-13-19-04-31-136470.jpg'
+primary-color='#000000000000'
+secondary-color='#000000000000'
 
 [org/gnome/desktop/session]
 idle-delay=uint32 240
@@ -173,6 +187,16 @@ focus-mode='click'
 num-workspaces=5
 theme='Dracula'
 
+[org/gnome/eog/ui]
+sidebar=false
+
+[org/gnome/eog/view]
+background-color='rgb(0,0,0)'
+use-background-color=true
+
+[org/gnome/evince/default]
+window-ratio=(2.6292943073297783, 1.9108795190463244)
+
 [org/gnome/evolution-data-server]
 migrated=true
 network-monitor-gio-name=''
@@ -186,11 +210,16 @@ sort-type='ascending'
 
 [org/gnome/file-roller/ui]
 sidebar-width=200
-window-height=480
-window-width=600
+window-height=477
+window-width=475
 
 [org/gnome/gedit/plugins]
-active-plugins=['docinfo', 'openlinks', 'modelines', 'sort', 'spell', 'filebrowser']
+active-plugins=['docinfo', 'spell', 'openlinks', 'modelines', 'filebrowser', 'sort']
+
+[org/gnome/gedit/plugins/filebrowser]
+root='file:///'
+tree-view=true
+virtual-root='file:///home/matheus/.fonts'
 
 [org/gnome/gedit/preferences/ui]
 show-tabs-mode='auto'
@@ -202,7 +231,7 @@ open-recent=false
 bottom-panel-size=140
 side-panel-active-page='GeditWindowDocumentsPanel'
 side-panel-size=200
-size=(954, 480)
+size=(475, 477)
 state=87168
 
 [org/gnome/gnome-system-monitor]
@@ -233,9 +262,13 @@ search-filter-time-type='last_modified'
 search-view='list-view'
 
 [org/gnome/nautilus/window-state]
-initial-size=(954, 520)
+initial-size=(1912, 1044)
 maximized=false
 sidebar-width=204
+start-with-sidebar=true
+
+[org/gnome/settings-daemon/peripherals/touchscreen]
+orientation-lock=true
 
 [org/gnome/settings-daemon/plugins/color]
 night-light-enabled=true
@@ -246,17 +279,22 @@ night-light-temperature=uint32 4271
 
 [org/gnome/settings-daemon/plugins/media-keys]
 control-center=['<Alt>s']
-custom-keybindings=@as []
+custom-keybindings=['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/']
 email=@as []
 logout=['<Primary><Alt>Delete']
 screenreader=@as []
-terminal=['<Primary><Alt>t', '<Super>Return', '<Super>KP_Enter']
+terminal=['<Primary><Alt>t']
 www=['<Super>b', '<Super>w']
 
 [org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/PopLaunch1]
 binding='Launch1'
 command='gnome-control-center wifi'
 name='WiFi'
+
+[org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0]
+binding='<Super>Return'
+command='kitty'
+name='Kitty Terminal'
 
 [org/gnome/settings-daemon/plugins/power]
 sleep-inactive-ac-timeout=7200
@@ -269,7 +307,7 @@ command-history=['terminal', 'gnome-terminal', 'r']
 disable-user-extensions=false
 disabled-extensions=['apps-menu@gnome-shell-extensions.gcampax.github.com', 'just-perfection-desktop@just-perfection', 'sound-output-device-chooser@kgshank.net', 'arcmenu@arcmenu.com']
 enabled-extensions=['pop-shell@system76.com', 'system76-power@system76.com', 'ubuntu-appindicators@ubuntu.com', 'popx11gestures@system76.com', 'user-theme@gnome-shell-extensions.gcampax.github.com', 'Vitals@CoreCoding.com', 'cosmic-workspaces@system76.com', 'pop-cosmic@system76.com', 'ding@rastersoft.com', 'dash-to-panel@jderose9.github.com', 'auto-move-windows@gnome-shell-extensions.gcampax.github.com', 'cosmic-dock@system76.com']
-favorite-apps=['org.gnome.Terminal.desktop', 'code.desktop', 'gnome-control-center.desktop', 'firefox.desktop', 'org.gnome.Nautilus.desktop']
+favorite-apps=['kitty.desktop', 'gnome-control-center.desktop', 'firefox.desktop', 'org.gnome.Nautilus.desktop']
 welcome-dialog-last-shown-version='42.1'
 
 [org/gnome/shell/extensions/arcmenu]
@@ -357,7 +395,7 @@ leftbox-padding=-1
 multi-monitors=true
 overview-click-to-exit=true
 panel-anchors='{"0":"MIDDLE","1":"MIDDLE"}'
-panel-element-positions='{"0":[{"element":"showAppsButton","visible":false,"position":"stackedTL"},{"element":"leftBox","visible":true,"position":"stackedTL"},{"element":"activitiesButton","visible":true,"position":"stackedTL"},{"element":"taskbar","visible":true,"position":"stackedTL"},{"element":"centerBox","visible":false,"position":"centerMonitor"},{"element":"dateMenu","visible":true,"position":"centerMonitor"},{"element":"rightBox","visible":true,"position":"stackedBR"},{"element":"systemMenu","visible":true,"position":"stackedBR"},{"element":"desktopButton","visible":true,"position":"stackedBR"}],"1":[{"element":"showAppsButton","visible":false,"position":"stackedTL"},{"element":"leftBox","visible":true,"position":"stackedTL"},{"element":"activitiesButton","visible":true,"position":"stackedTL"},{"element":"taskbar","visible":true,"position":"stackedTL"},{"element":"centerBox","visible":false,"position":"centerMonitor"},{"element":"dateMenu","visible":true,"position":"centerMonitor"},{"element":"rightBox","visible":true,"position":"stackedBR"},{"element":"systemMenu","visible":true,"position":"stackedBR"},{"element":"desktopButton","visible":true,"position":"stackedBR"}]}'
+panel-element-positions='{"0":[{"element":"showAppsButton","visible":false,"position":"stackedTL"},{"element":"leftBox","visible":true,"position":"stackedTL"},{"element":"activitiesButton","visible":false,"position":"stackedTL"},{"element":"taskbar","visible":true,"position":"stackedTL"},{"element":"centerBox","visible":false,"position":"centerMonitor"},{"element":"dateMenu","visible":true,"position":"centerMonitor"},{"element":"rightBox","visible":true,"position":"stackedBR"},{"element":"systemMenu","visible":true,"position":"stackedBR"},{"element":"desktopButton","visible":true,"position":"stackedBR"}],"1":[{"element":"showAppsButton","visible":false,"position":"stackedTL"},{"element":"leftBox","visible":true,"position":"stackedTL"},{"element":"activitiesButton","visible":false,"position":"stackedTL"},{"element":"taskbar","visible":true,"position":"stackedTL"},{"element":"centerBox","visible":false,"position":"centerMonitor"},{"element":"dateMenu","visible":true,"position":"centerMonitor"},{"element":"rightBox","visible":true,"position":"stackedBR"},{"element":"systemMenu","visible":true,"position":"stackedBR"},{"element":"desktopButton","visible":true,"position":"stackedBR"}]}'
 panel-lengths='{"0":100,"1":100}'
 panel-positions='{"0":"TOP","1":"TOP"}'
 panel-sizes='{"0":28,"1":28}'
@@ -477,14 +515,14 @@ find-next='disabled'
 find-previous='disabled'
 move-tab-left='disabled'
 move-tab-right='disabled'
-new-tab='<Primary>t'
+new-tab='<Primary><Shift>t'
 new-window='<Primary><Shift>n'
 next-tab='<Primary>b'
 paste='<Primary>v'
 preferences='<Alt>e'
 prev-tab='disabled'
 reset='disabled'
-select-all='<Primary>a'
+select-all='disabled'
 switch-to-tab-last='<Alt>minus'
 toggle-menubar='disabled'
 zoom-in='<Primary>equal'
@@ -522,5 +560,5 @@ sort-column='name'
 sort-directories-first=true
 sort-order='ascending'
 type-format='category'
-window-position=(1411, 121)
-window-size=(1096, 822)
+window-position=(135, 832)
+window-size=(1096, 697)
