Update symbols in shell prompt

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -40,18 +40,14 @@ symbol = " "
 style = "bold red"
 
 [nodejs]
-symbol = " "
+symbol = "⬢ "
 style = "bold green"
 
 [python]
-symbol = " "
+symbol = "🐍 "
 style = "bold blue"
 
 [c]
 symbol = " "
-style = "bold blue"
-
-[lua]
-symbol = " "
 style = "bold blue"
 
