--- a/.config/.dconf-configs/pop-os-mac.ini
+++ b/.config/.dconf-configs/pop-os-mac.ini
@@ -58,7 +58,7 @@ translate=true
 color-shading-type='solid'
 picture-options='zoom'
 picture-uri='file:///usr/share/backgrounds/pop/sebastien-gabriel-232361.jpg'
-picture-uri-dark='file:///home/matheus/.local/share/backgrounds/2022-07-13-19-04-31-136470.jpg'
+picture-uri-dark='file:///home/matheus/.local/share/backgrounds/2022-07-23-00-17-52-020f99955800d1a5a5e018ab3babcf59.jpg'
 primary-color='#000000000000'
 secondary-color='#000000000000'
 
@@ -159,7 +159,7 @@ tls-key='/home/matheus/.local/share/gnome-remote-desktop/rdp-tls.key'
 color-shading-type='solid'
 lock-delay=uint32 30
 picture-options='zoom'
-picture-uri='file:///home/matheus/.local/share/backgrounds/2022-07-13-19-04-31-136470.jpg'
+picture-uri='file:///home/matheus/.local/share/backgrounds/2022-07-23-00-17-52-020f99955800d1a5a5e018ab3babcf59.jpg'
 primary-color='#000000000000'
 secondary-color='#000000000000'
 
@@ -308,6 +308,7 @@ disable-user-extensions=false
 disabled-extensions=['apps-menu@gnome-shell-extensions.gcampax.github.com', 'just-perfection-desktop@just-perfection', 'sound-output-device-chooser@kgshank.net', 'arcmenu@arcmenu.com']
 enabled-extensions=['pop-shell@system76.com', 'system76-power@system76.com', 'ubuntu-appindicators@ubuntu.com', 'popx11gestures@system76.com', 'user-theme@gnome-shell-extensions.gcampax.github.com', 'Vitals@CoreCoding.com', 'cosmic-workspaces@system76.com', 'pop-cosmic@system76.com', 'ding@rastersoft.com', 'dash-to-panel@jderose9.github.com', 'auto-move-windows@gnome-shell-extensions.gcampax.github.com', 'cosmic-dock@system76.com']
 favorite-apps=['kitty.desktop', 'gnome-control-center.desktop', 'firefox.desktop', 'org.gnome.Nautilus.desktop']
+remember-mount-password=false
 welcome-dialog-last-shown-version='42.1'
 
 [org/gnome/shell/extensions/arcmenu]
@@ -560,5 +561,5 @@ sort-column='name'
 sort-directories-first=true
 sort-order='ascending'
 type-format='category'
-window-position=(135, 832)
+window-position=(225, 28)
 window-size=(1096, 697)
