Major system improvments

--- a/.config/.dconf-configs/pop-os-mac.ini
+++ b/.config/.dconf-configs/pop-os-mac.ini
@@ -7,8 +7,8 @@ window-y=99
 cached-drivers=@as []
 last-refresh-time=int64 1658165940
 window-maximized=false
-window-position=(2328, 32)
-window-size=(954, 1044)
+window-position=(4, 32)
+window-size=(1358, 732)
 
 [org/gnome/GWeather]
 temperature-unit='centigrade'
@@ -86,7 +86,7 @@ show-battery-percentage=true
 toolkit-accessibility=false
 
 [org/gnome/desktop/notifications]
-application-children=['firefox', 'org-gnome-shell-extensions', 'org-gnome-terminal', 'gnome-network-panel', 'org-gnome-nautilus', 'org-gnome-geary', 'gnome-power-panel', 'org-gnome-gedit', 'org-gnome-tweaks', 'gnome-control-center', 'org-gnome-eog', 'org-gnome-fileroller', 'io-elementary-appcenter', 'org-gnome-font-viewer', 'kitty']
+application-children=['firefox', 'org-gnome-shell-extensions', 'org-gnome-terminal', 'gnome-network-panel', 'org-gnome-nautilus', 'org-gnome-geary', 'gnome-power-panel', 'org-gnome-gedit', 'org-gnome-tweaks', 'gnome-control-center', 'org-gnome-eog', 'org-gnome-fileroller', 'io-elementary-appcenter', 'org-gnome-font-viewer', 'kitty', 'zoom']
 
 [org/gnome/desktop/notifications/application/firefox]
 application-id='firefox.desktop'
@@ -136,6 +136,9 @@ application-id='org.gnome.Totem.desktop'
 [org/gnome/desktop/notifications/application/org-gnome-tweaks]
 application-id='org.gnome.tweaks.desktop'
 
+[org/gnome/desktop/notifications/application/zoom]
+application-id='Zoom.desktop'
+
 [org/gnome/desktop/peripherals/keyboard]
 numlock-state=true
 
@@ -168,12 +171,12 @@ idle-delay=uint32 240
 
 [org/gnome/desktop/wm/keybindings]
 begin-resize=['<Alt><Super>r']
-close=['<Shift><Super>c']
+close=['<Alt>F4', '<Super>q', '<Shift><Super>c']
 maximize=['<Shift><Super>m']
 maximize-horizontally=['<Alt><Super>h']
 maximize-vertically=['<Alt><Super>v']
-minimize=['<Super>q']
-show-desktop=['<Shift><Super>q']
+minimize=['<Super>c']
+show-desktop=['<Primary><Super>o']
 switch-to-workspace-1=['<Super>Home', '<Super>1', '<Super>KP_1']
 switch-to-workspace-2=['<Super>2', '<Super>KP_2']
 switch-to-workspace-3=['<Super>3', '<Super>KP_3']
@@ -195,7 +198,7 @@ background-color='rgb(0,0,0)'
 use-background-color=true
 
 [org/gnome/evince/default]
-window-ratio=(2.6292943073297783, 1.9108795190463244)
+window-ratio=(1.1372799354925411, 0.43236052215847676)
 
 [org/gnome/evolution-data-server]
 migrated=true
@@ -214,12 +217,12 @@ window-height=477
 window-width=475
 
 [org/gnome/gedit/plugins]
-active-plugins=['docinfo', 'spell', 'openlinks', 'modelines', 'filebrowser', 'sort']
+active-plugins=['spell', 'sort', 'filebrowser', 'openlinks', 'docinfo', 'modelines']
 
 [org/gnome/gedit/plugins/filebrowser]
 root='file:///'
 tree-view=true
-virtual-root='file:///home/matheus/.fonts'
+virtual-root='file:///home/matheus'
 
 [org/gnome/gedit/preferences/ui]
 show-tabs-mode='auto'
@@ -231,7 +234,7 @@ open-recent=false
 bottom-panel-size=140
 side-panel-active-page='GeditWindowDocumentsPanel'
 side-panel-size=200
-size=(475, 477)
+size=(376, 321)
 state=87168
 
 [org/gnome/gnome-system-monitor]
@@ -262,7 +265,7 @@ search-filter-time-type='last_modified'
 search-view='list-view'
 
 [org/gnome/nautilus/window-state]
-initial-size=(1912, 1044)
+initial-size=(677, 364)
 maximized=false
 sidebar-width=204
 start-with-sidebar=true
@@ -278,12 +281,18 @@ night-light-schedule-to=5.0
 night-light-temperature=uint32 4271
 
 [org/gnome/settings-daemon/plugins/media-keys]
-control-center=['<Alt>s']
+control-center=['<Shift><Super>s']
 custom-keybindings=['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/']
-email=@as []
-logout=['<Primary><Alt>Delete']
+logout=['<Primary><Alt>Delete', '<Shift><Super>q']
+next=['AudioNext']
+play=['AudioPlay']
+previous=['AudioPrev']
 screenreader=@as []
+search=@as []
 terminal=['<Primary><Alt>t']
+volume-down=['AudioLowerVolume']
+volume-mute=['AudioMute']
+volume-up=['AudioRaiseVolume']
 www=['<Super>b', '<Super>w']
 
 [org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/PopLaunch1]
@@ -368,7 +377,7 @@ animate-appicon-hover-animation-travel={'SIMPLE': 0.10000000000000001, 'RIPPLE':
 animate-appicon-hover-animation-type='SIMPLE'
 appicon-margin=4
 appicon-padding=4
-available-monitors=[0, 1]
+available-monitors=[0]
 desktop-line-use-custom-color=false
 dot-color-dominant=false
 dot-color-override=false
@@ -456,7 +465,7 @@ show-workspaces-button=true
 workspace-picker-left=true
 
 [org/gnome/shell/extensions/pop-shell]
-activate-launcher=['<Super>slash', '<Super>r', '<Shift><Super>Return']
+activate-launcher=['<Super>slash', '<Shift><Super>Return', 'Search']
 active-hint=true
 gap-inner=uint32 1
 gap-outer=uint32 1
@@ -465,7 +474,7 @@ mouse-cursor-follows-active-window=true
 show-skip-taskbar=true
 smart-gaps=false
 tile-by-default=true
-tile-enter=['<Shift><Super>a', '<Super>apostrophe']
+tile-enter=['<Shift><Super>a']
 toggle-floating=['<Super>g', '<Super>t']
 toggle-tiling=['<Super>y', '<Shift><Super>t']
 
@@ -495,7 +504,9 @@ use-higher-precision=false
 
 [org/gnome/shell/keybindings]
 open-application-menu=@as []
+show-screen-recording-ui=['<Primary><Shift><Alt>r', '<Super>Print']
 toggle-application-view=['<Super>a']
+toggle-overview=['<Super>d', '<Super>p']
 
 [org/gnome/shell/weather]
 automatic-location=true
@@ -561,5 +572,5 @@ sort-column='name'
 sort-directories-first=true
 sort-order='ascending'
 type-format='category'
-window-position=(225, 28)
+window-position=(135, 28)
 window-size=(1096, 697)
