--- a/.config/topgrade.toml
+++ b/.config/topgrade.toml
@@ -2,7 +2,7 @@
 #assume_yes = true
 
 # Disable specific steps - same options as the command line flag
-#disable = ["system", "emacs"]
+disable = ["git"]
 
 # Ignore failures for these steps
 #ignore_failures = ["powershell"]
@@ -87,7 +87,7 @@
 # Causes Topgrade to rename itself during the run to allow package managers
 # to upgrade it. Use this only if you installed Topgrade by using a package
 # manager such as Scoop to Cargo
-#self_rename = true
+self_rename = true
 
 [npm]
 # Use sudo if the NPM directory isn't owned by the current user
@@ -100,3 +100,4 @@
 [flatpak]
 # Use sudo for updating the system-wide installation
 #use_sudo = true
+
