--- a/.config/topgrade.toml
+++ b/.config/topgrade.toml
@@ -2,7 +2,7 @@
 #assume_yes = true
 
 # Disable specific steps - same options as the command line flag
-disable = ["git"]
+disable = ["git_repos"]
 
 # Ignore failures for these steps
 #ignore_failures = ["powershell"]
