--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -33,18 +33,11 @@ truncation_length = 4
 truncation_symbol = "…/"
 truncate_to_repo = false
 
-# Here is how you can shorten some long paths by text replacement
-# similar to mapped_locations in Oh My Posh:
 [directory.substitutions]
 "Documents" = ""
 "Downloads" = ""
 "Music" = ""
 "Pictures" = ""
-# Keep in mind that the order matters. For example:
-# "Important Documents" = "  "
-# will not be replaced, because "Documents" was already substituted before.
-# So either put "Important Documents" before "Documents" or use the substituted version:
-# "Important  " = "  "
 
 [git_branch]
 symbol = ""
@@ -96,6 +89,7 @@ style = "bg:#86BBD8 fg:#0b1114"
 format = '[[ $symbol ($version) ](bg:#86BBD8 fg:#0b1114)]($style)'
 
 [lua]
+symbol = ""
 style = "bg:#86BBD8 fg:#0b1114"
 format = '[[ $symbol ($version) ](bg:#86BBD8 fg:#0b1114)]($style)'
 
