Small desktop upgrade

--- a/.config/.dconf-configs/pop-os-mac.ini
+++ b/.config/.dconf-configs/pop-os-mac.ini
@@ -5,7 +5,7 @@ window-y=99
 
 [io/elementary/appcenter/settings]
 cached-drivers=@as []
-last-refresh-time=int64 1658165940
+last-refresh-time=int64 1659208821
 window-maximized=false
 window-position=(4, 32)
 window-size=(1358, 732)
@@ -26,7 +26,7 @@ subtitle-encoding='UTF-8'
 locations=[<(uint32 2, <('Campinas', 'SBKP', true, [(-0.40154692362195432, -0.82265123889688618)], [(-0.39968039870670141, -0.82175918366289935)])>)>]
 
 [org/gnome/control-center]
-last-panel='background'
+last-panel='display'
 
 [org/gnome/desktop/a11y/applications]
 screen-reader-enabled=false
@@ -265,7 +265,7 @@ search-filter-time-type='last_modified'
 search-view='list-view'
 
 [org/gnome/nautilus/window-state]
-initial-size=(677, 364)
+initial-size=(677, 732)
 maximized=false
 sidebar-width=204
 start-with-sidebar=true
@@ -377,7 +377,7 @@ animate-appicon-hover-animation-travel={'SIMPLE': 0.10000000000000001, 'RIPPLE':
 animate-appicon-hover-animation-type='SIMPLE'
 appicon-margin=4
 appicon-padding=4
-available-monitors=[0]
+available-monitors=[0, 1]
 desktop-line-use-custom-color=false
 dot-color-dominant=false
 dot-color-override=false
@@ -572,5 +572,5 @@ sort-column='name'
 sort-directories-first=true
 sort-order='ascending'
 type-format='category'
-window-position=(135, 28)
+window-position=(45, 28)
 window-size=(1096, 697)
