--- a/.config/kitty/keybindings.conf
+++ b/.config/kitty/keybindings.conf
@@ -8,7 +8,7 @@ map kitty_mod+k     next_window
 map kitty_mod+l     next_window
 
 map alt+c           close_window
-map alt+d           detach_window new-tab
+map alt+t           detach_window new-tab
 map alt+d           detach_tab
 map alt+q           close_tab
 
