--- a/.config/nitrogen/bg-saved.cfg
+++ b/.config/nitrogen/bg-saved.cfg
@@ -1,9 +1,9 @@
 [xin_1]
-file=/home/matheus/Pictures/wp6495654.jpg
-mode=4
+file=/home/matheus/wallpapers/matheus/m2.png
+mode=0
 bgcolor=#000000
 
 [xin_0]
-file=/home/matheus/Pictures/020f99955800d1a5a5e018ab3babcf59.jpg
-mode=4
+file=/home/matheus/wallpapers/matheus/m1.png
+mode=0
 bgcolor=#000000
