--- a/.config/nitrogen/bg-saved.cfg
+++ b/.config/nitrogen/bg-saved.cfg
@@ -1,9 +1,9 @@
 [xin_0]
-file=/home/matheus/Pictures/wallpapers/0005.jpg
+file=/home/matheus/Pictures/wallpapers/matheus/m2.png
 mode=0
 bgcolor=#000000
 
 [xin_1]
-file=/home/matheus/Pictures/wallpapers/0018.jpg
+file=/home/matheus/Pictures/wallpapers/matheus/m1.png
 mode=0
 bgcolor=#000000
