--- a/.config/nitrogen/nitrogen.cfg
+++ b/.config/nitrogen/nitrogen.cfg
@@ -1,12 +1,12 @@
 [geometry]
-posx=2426
+posx=2330
 posy=24
-sizex=852
-sizey=341
+sizex=948
+sizey=1048
 
 [nitrogen]
 view=icon
 recurse=true
 sort=alpha
-icon_caps=false
+icon_caps=true
 dirs=/home/matheus/Pictures/wallpapers;
