--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -2,7 +2,6 @@
 #             Shadows           #
 #################################
 
-
 # Enabled client-side shadows on windows. Note desktop windows
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow,
 # unless explicitly requested using the wintypes option.
@@ -69,7 +68,6 @@ shadow-exclude = [
 #           Fading              #
 #################################
 
-
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
 # fading = false
@@ -77,14 +75,14 @@ fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
-fade-in-step = 0.03;
+fade-in-step = 0.028;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
 # fade-out-step = 0.03
 fade-out-step = 0.03;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-# fade-delta = 10
+fade-delta = 5
 
 # Specify a list of conditions of windows that should not be faded.
 # fade-exclude = []
@@ -99,7 +97,6 @@ fade-out-step = 0.03;
 #################################
 #   Transparency / Opacity      #
 #################################
-
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
@@ -143,7 +140,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 0
+corner-radius = 15
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
@@ -156,14 +153,13 @@ rounded-corners-exclude = [
 #     Background-Blurring       #
 #################################
 
-
 # Parameters for background blurring, see the *BLUR* section for more information.
-# blur-method =
+blur-method = "dual_kawase";
 # blur-size = 12
 #
 # blur-deviation = false
 #
-# blur-strength = 5
+blur-strength = 5
 
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
@@ -196,7 +192,8 @@ blur-kern = "3x3box";
 blur-background-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@:c"
+  "QTILE_INTERNAL:32c = 1", # to not blur the qtile bar
+  "_GTK_FRAME_EXTENTS@:c" # not sure why, but leave this line as the last one
 ];
 
 #################################
@@ -212,8 +209,8 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-# backend = "glx"
-backend = "xrender";
+backend = "glx"
+#backend = "xrender";
 
 # Enable/disable VSync.
 # vsync = false
