Update some kitty configs

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,8 +1,8 @@
-include ./fonts.conf 
+include ./fonts.conf
 include ./cursor.conf
 include ./details.conf
 include ./layout.conf
 include ./tabbar.conf
-include ./onedark.conf
+include ./themes/onedark.conf
 include ./keybindings.conf
 
