--- a/.config/kitty/themes/onedark.conf
+++ b/.config/kitty/themes/onedark.conf
@@ -1,6 +1,5 @@
-# One Dark by Giuseppe Cesarano, https://github.com/GiuseppeCesarano
-# This work is licensed under the terms of the GPL-2.0 license.
-# For a copy, see https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html.
+# One Dark by Giuseppe Cesarano, https://github.com/GiuseppeCesarano/kitty-theme-OneDark
+# modified by Matheus Turcheti
 
 # Colors
 foreground #979eab
@@ -43,7 +42,4 @@ active_tab_foreground   #282c34
 active_tab_background   #979eab
 inactive_tab_foreground #abb2bf
 inactive_tab_background #282c34
-
-# to show just a little bit of my wallpaper
-background_opacity 0.95
 
