--- a/.config/topgrade.toml
+++ b/.config/topgrade.toml
@@ -43,6 +43,7 @@
 repos = [
    "~/Downloads/neovide",
    "~/Downloads/picom",
+   "~/Downloads/dunst",
    "~/Pictures/wallpapers/dt",
    "~/Pictures/wallpapers/catppuccin",
 ]
