--- a/.config/topgrade.toml
+++ b/.config/topgrade.toml
@@ -32,24 +32,21 @@
 #set_title = false
 
 # Display the time in step titles
-# display_time = true
+display_time = true
 
 # Cleanup temporary or old files
-#cleanup = true
+cleanup = true
 
 [git]
 #max_concurrency = 5
 # Additional git repositories to pull
 repos = [
-   "~/Downloads/neovide",
-   "~/Downloads/picom",
-   "~/Downloads/dunst",
    "~/Pictures/wallpapers/dt",
    "~/Pictures/wallpapers/catppuccin",
 ]
 
 # Don't pull the predefined git repos
-#pull_predefined = false
+pull_predefined = false
 
 # Arguments to pass Git when pulling Repositories
 #arguments = "--rebase --autostash"
@@ -63,7 +60,11 @@ repos = [
 
 # Custom commands
 [commands]
-#"Python Environment" = "~/dev/.env/bin/pip install -i https://pypi.python.org/simple -U --upgrade-strategy eager jupyter"
+"Bob" = "bob use stable"
+"Pip Packages" = "pip install --upgrade jupyterlab jupyterlab-vim jupytext pynvim ueberzug Pillow cairosvg plotly kaleido jupyter-client xcffib cairocffi qtile iwlib psutil"
+"Neovide" = "cd $HOME/Downloads/neovide && cargo build --release && cp ./target/release/neovide $HOME/.local/bin/"
+"Picom" = "cd $HOME/Downloads/picom && git submodule update --init --recursive && meson --buildtype=release . build && ninja -C build && mv $HOME/.local/bin/picom $HOME/.local/bin/picom-old && cp build/src/picom $HOME/.local/bin/"
+"Dunst" = "cd $HOME/Downloads/dunst && make && sudo make install"
 
 [brew]
 #greedy_cask = true
