I am ashamed... but looks so good

--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -5,17 +5,17 @@ print_info() {
     info underline
 
     info "OS" distro
-    info "Host" model
+    # info "Host" model
     info "Kernel" kernel
     info "Uptime" uptime
     info "Packages" packages
     info "Shell" shell
-    info "Resolution" resolution
+    # info "Resolution" resolution
     info "DE" de
-    info "WM" wm
+    # info "WM" wm
     # info "WM Theme" wm_theme
-    info "Theme" theme
-    info "Icons" icons
+    # info "Theme" theme
+    # info "Icons" icons
     info "Terminal" term
     # info "Terminal Font" term_font
     info "CPU" cpu
@@ -101,7 +101,7 @@ os_arch="off"
 # on:   '2 days, 10 hours, 3 mins'
 # tiny: '2d 10h 3m'
 # off:  '2 days, 10 hours, 3 minutes'
-uptime_shorthand="on"
+uptime_shorthand="tiny"
 
 
 # Memory
@@ -694,7 +694,7 @@ disk_display="off"
 # Values:   'ascii', 'caca', 'chafa', 'jp2a', 'iterm2', 'off',
 #           'pot', 'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
 # Flag:     --backend
-image_backend="ascii"
+image_backend="kitty"
 
 # Image Source
 #
@@ -708,7 +708,7 @@ image_backend="ascii"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="auto"
+image_source="/home/matheus/Pictures/wallpapers/matheus/m3.png"
 
 
 # Ascii Options
@@ -808,7 +808,7 @@ thumbnail_dir="${XDG_CACHE_HOME:-${HOME}/.cache}/thumbnails/neofetch"
 #
 # See this wiki page to learn about the fit and fill options.
 # https://github.com/dylanaraps/neofetch/wiki/What-is-Waifu-Crop%3F
-crop_mode="normal"
+crop_mode="fit"
 
 # Crop offset
 # Note: Only affects 'normal' crop mode.
@@ -826,7 +826,7 @@ crop_offset="center"
 # Values:  'auto', '00px', '00%', 'none'
 # Flags:   --image_size
 #          --size
-image_size="auto"
+image_size="300"
 
 # Gap between image and text
 #
