Update terminal theme

--- a/.config/kitty/themes/doom_one.conf
+++ b/.config/kitty/themes/doom_one.conf
@@ -1,4 +1,4 @@
-# got from NTHBBloodBath/doom-one.nvim
+# got from https://github.com/NTBBloodbath/doom-one.nvim/tree/main/extras
 foreground #bbc2cf
 background #282c34
 color0 #282c34
