--- a/.config/kitty/fonts.conf
+++ b/.config/kitty/fonts.conf
@@ -1,14 +1,26 @@
-font_size        12.0
+font_size 12.0
 
 disable_ligatures cursor
 
-font_family      Fira Code Retina
-bold_font        Fira Code Bold
-italic_font      Fira Code RegularItalic
-bold_italic_font Fira Code BoldItalic
+font_family      JetBrains Mono Medium
+bold_font        JetBrains Mono Bold
+italic_font      JetBrains Mono Italic
+bold_italic_font JetBrains Mono Bold Italic
 
-font_features FiraCode-Retina           zero ss03 ss06
-font_features FiraCode-Bold             zero ss03 ss06
-font_features FiraCode-RegularItalic    zero ss03 ss06
-font_features FiraCode-BoldItalic       zero ss03 ss06
+font_features FiraCode-Retina        zero ss03 ss06
+font_features FiraCode-Bold          zero ss03 ss06
+font_features FiraCode-RegularItalic zero ss03 ss06
+font_features FiraCode-BoldItalic    zero ss03 ss06
+
+/*
+ligatures
+- Fira Code (Retina, Bold, RegularItalic, BoldItalic)
+- JetBrains Mono (Medium, Bold, Italic, Bold Italic)
+- Cascadia Code
+- Monoid (Retina, Bold, Italic, Bold)
+
+no ligatures
+- IBM Plex Mono (Text, Bold, Italic, Bold Italic)
+- Fantasque Sans Mono
+*/
 
