--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -47,7 +47,8 @@ shadow-exclude = [
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
-  "_GTK_FRAME_EXTENTS@:c"
+  "QTILE_INTERNAL:32c = 1",
+  "_GTK_FRAME_EXTENTS@:c" # not sure why, but leave this line as the last one
 ];
 
 # Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
@@ -188,10 +189,10 @@ blur-kern = "3x3box";
 
 
 # Exclude conditions for background blur.
-# blur-background-exclude = []
 blur-background-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
+  "QTILE_INTERNAL:32c = 1",
   "_GTK_FRAME_EXTENTS@:c" # not sure why, but leave this line as the last one
 ];
 
