--- a/.config/kitty/keybindings.conf
+++ b/.config/kitty/keybindings.conf
@@ -1,6 +1,7 @@
 kitty_mod           ctrl+shift
 
 map kitty_mod+r     load_config_file
+map ctrl+shift+n    no_op
 
 map kitty_mod+h     previous_window
 map kitty_mod+j     previous_window
