Some updates for a system reinstall

--- a/.config/kitty/fonts.conf
+++ b/.config/kitty/fonts.conf
@@ -1,26 +1,6 @@
-font_size 12.5
+font_size 12
 
 disable_ligatures cursor
 
-font_family      JetBrains Mono Medium
-bold_font        JetBrains Mono Bold
-italic_font      JetBrains Mono Italic
-bold_italic_font JetBrains Mono Bold Italic
-
-/*
-ligatures
-- JetBrains Mono (Medium, Bold, Italic, Bold Italic)
-- Fira Code (Retina, Bold, RegularItalic, BoldItalic)
-- Cascadia Code
-- Monoid (Retina, Bold, Italic, Bold)
-
-no ligatures
-- IBM Plex Mono (Text, Bold, Italic, Bold Italic)
-- Fantasque Sans Mono
-*/
-
-font_features FiraCode-Retina        zero ss03 ss06
-font_features FiraCode-Bold          zero ss03 ss06
-font_features FiraCode-RegularItalic zero ss03 ss06
-font_features FiraCode-BoldItalic    zero ss03 ss06
+font_family      JetBrains Mono Nerd Font
 
