--- a/.config/topgrade.toml
+++ b/.config/topgrade.toml
@@ -45,6 +45,7 @@ repos = [
     "~/Downloads/neovide",
     "~/Downloads/picom",
     "~/Downloads/dunst",
+    "~/Downloads/rofi-power-menu",
     "~/Pictures/wallpapers",
 ]
 
@@ -83,16 +84,6 @@ pull_predefined = false
 #emerge_update_flags = "-uDNa --with-bdeps=y world"
 #redhat_distro_sync = false
 #rpm_ostree = false
-
-[windows]
-# Manually select Windows updates
-#accept_all_updates = false
-#open_remotes_in_new_terminal = true
-
-# Causes Topgrade to rename itself during the run to allow package managers
-# to upgrade it. Use this only if you installed Topgrade by using a package
-# manager such as Scoop to Cargo
-self_rename = true
 
 [npm]
 # Use sudo if the NPM directory isn't owned by the current user
