--- a/.config/kitty/keybindings.conf
+++ b/.config/kitty/keybindings.conf
@@ -9,7 +9,6 @@ map kitty_mod+k     next_window
 map kitty_mod+l     next_window
 
 map alt+c           close_window
-map alt+t           detach_window new-tab
 map alt+d           detach_tab
-map alt+q           close_tab
+map kitty_mod+alt+q           close_tab
 
